Deploy/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventgriddemo
  labels:
    app: eventgriddemo
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: eventgriddemo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eventgriddemo-v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: eventgriddemo
        version: v1
    spec:
      containers:
      - name: eventgriddemo
        image: bjd145.azurecr.io/eventdemo:0.22
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: azuretable
spec:
  hosts:
  - bjddemosa002.table.core.windows.net
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: azuretable
spec:
  hosts:
  - bjddemosa002.table.core.windows.net
  tls:
  - match:
    - port: 443
      sni_hosts:
      - bjddemosa002.table.core.windows.net
    route:
    - destination:
        host: bjddemosa002.table.core.windows.net
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bjdistio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
       number: 443
       name: https
       protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
     - "istiosamples.denicolafamily.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whatosistio
spec:
  hosts:
  - "istiosamples.denicolafamily.com"
  gateways:
  - bjdistio-gateway
  http:
  - match:
    - uri:
        exact: /api/eventgriddemo 
    route:
    - destination:
        host: eventgriddemo
        port:
          number: 80
